# optimiz-r

./: .dockerignore  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  FINAL_RELEASE_STATUS.md  LICENSE  LINKEDIN_POST.md  Makefile  PROJECT_SUMMARY.md  PUBLICATION_STATUS.md  PYPI_PUBLISHING.md  README.md  RELEASE_NOTES_v1.0.0.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  ENHANCEMENT_SUITE_COMPLETE.md  Makefile  requirements.txt
docs/source/: benchmarks.md  changelog.md  conf.py  contributing.md  examples.md  getting-started.md  index.rst  installation.md  mfg_tutorial.md  quickstart.md
examples/: BENCHMARK_RESULTS.md  hmm_regime_detection.py  parallel_de_benchmark.py  polaroid_optimizr_integration.py
examples/notebooks/: 01_hmm_tutorial.ipynb  02_mcmc_tutorial.ipynb  03_differential_evolution_tutorial.ipynb  04_kalman_filter_sensor_fusion.ipynb  04_real_world_applications.ipynb  05_performance_benchmarks.ipynb  mean_field_games_tutorial.ipynb
python/optimizr/: __init__.py  core.py  hmm.py
src/: core.rs  differential_evolution.rs  grid_search.rs  hmm_legacy.rs  information_theory.rs  lib.rs  mcmc_legacy.rs  risk_metrics.rs  rust_objectives.rs  sparse_optimization.rs  timeseries_utils.rs
src/de/: mod.rs
src/hmm/: config.rs  emission.rs  mod.rs  model.rs  python_bindings.rs  viterbi.rs
src/mcmc/: config.rs  likelihood.rs  mod.rs  proposal.rs  python_bindings.rs  sampler.rs
src/mean_field/: mod.rs  python_bindings.rs
src/optimal_control/: backtest.rs  mod.rs  (+3 more)
tests/: test_optimizr.py
(+15 files in other folders)
