[package]
name = "optimizr"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance optimization algorithms in Rust with Python bindings"
license = "MIT"
repository = "https://github.com/yourusername/optimiz-r"
keywords = ["optimization", "machine-learning", "statistics", "numerical", "scientific"]
categories = ["algorithms", "science", "mathematics"]
readme = "README.md"

[lib]
name = "optimizr"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
numpy = "0.21"
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
num-traits = "0.2"
rayon = "1.8"
thiserror = "1.0"
ordered-float = "4.2"
statrs = "0.17"

[features]
default = []
parallel = []

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
